staging/ssl-staging-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stage-api-v2-ssl
  namespace: default
  labels:
    app: stage-api-v2-ssl
spec:
  replicas: 1 # number of pods
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 5
  template:
    metadata:
      labels:
        app: stage-api-v2-ssl
    spec:
      containers:
        - name: stage-sample-v2-image
          image: gcr.io/sample-xxxxx-production-v2/stage-sample-v2-image-ssl
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: websocket
              containerPort: 9009
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/status
              port: 3001
            initialDelaySeconds: 5
            timeoutSeconds: 300
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/status
              port: 3001
            initialDelaySeconds: 5
            timeoutSeconds: 60
            periodSeconds: 120
            successThreshold: 1
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: stage-api-v2-ssl
spec:
  selector:
    app: stage-api-v2-ssl
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3001
    - name: https
      port: 443
      targetPort: 8080
